--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -6,42 +6,19 @@
 }
 
 html {
-    font-size: 22px;
+    font-size: 18px;
 }
 /* 适配高分辨率屏幕（一般为 Retina 屏幕，分辨率为 192dpi 或更高） */
 @media only screen and (min-resolution: 192dpi) {
     html {
-        font-size: 24px; /* 增加字体大小 */
+        font-size: 20px; /* 增加字体大小 */
     }
 }
 
 /* 适配超高分辨率屏幕（例如 4K 屏幕，分辨率为 384dpi 或更高） */
 @media only screen and (min-resolution: 384dpi) {
     html {
-        font-size: 26px; /* 更大字体 */
-    }
-}
-header,.content,.medium{
-    width: 60%;
-    margin: auto;
-}
-.medium{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /*max-width: 60%;*/
-    margin: auto;
-}
-/* 当屏幕宽度 ≤ 1024px 时应用的样式 */
-@media (max-width: 1024px) {
-    header,.content{
-        width: 95%;
-    }
-}
-/* 当屏幕宽度 ≤ 1600px 时应用的样式 */
-@media (max-width: 1600px) {
-    .medium{
-        flex-direction: column;
+        font-size: 22px; /* 更大字体 */
     }
 }
 body{
@@ -60,7 +37,7 @@ body{
     --carouselWidth: 25rem;
     max-width: var(--carouselWidth);
     height: calc(var(--carouselWidth) * 34.61 / 25);
-    margin: auto auto;
+    margin: 30px auto;
     overflow: hidden;
     position: relative;
 }
@@ -102,7 +79,10 @@ body{
 .next-btn {
     right: 0.5rem;
 }
-
+header,.content{
+    /*width: 60%;*/
+    margin: auto;
+}
 header{
     display: flex;
     justify-content: space-between;
@@ -110,12 +90,13 @@ header{
     padding: 0.5rem;
 }
 .logo{
-    max-width: 8rem;
+    max-width: 25%;
+}
+.logo,.menu{
+    display: inline;
 }
 
-.medium-content{
-    padding: 1rem;
-}
+
 footer{
     margin: auto;
     text-align: center;
