--- a/CSS/note-mobile.css
+++ b/CSS/note-mobile.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'MyFont';
-    src: url('../FONTS/臺灣新細明體.ttf') format('truetype');
+    src: url('../FONTS/taiwan.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
